[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "llama-index-tools-ejentum"
version = "0.1.0"
description = "LlamaIndex tool spec for the Ejentum Reasoning Harness. Wraps the hosted Ejentum MCP server and exposes four cognitive harness tools (reasoning, code, anti-deception, memory) as LlamaIndex FunctionTool objects. Each call returns a task-matched cognitive operation engineered in two layers: a natural-language procedure plus an executable reasoning topology (graph DAG with gates, parallel branches, and meta-cognitive exits)."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Ejentum", email = "info@ejentum.com" },
]
keywords = [
    "llama-index",
    "llamaindex",
    "llama-index-tools",
    "ejentum",
    "reasoning-harness",
    "mcp",
    "model-context-protocol",
    "agentic-ai",
    "llm",
    "anti-deception",
    "cognitive-scaffold",
    "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "llama-index-core>=0.13.0,<0.15",
    "llama-index-tools-mcp>=0.4.1,<0.5",
]

[project.urls]
Homepage = "https://ejentum.com"
Documentation = "https://ejentum.com/docs/api_reference"
Repository = "https://github.com/ejentum/llama-index-tools-ejentum"
Issues = "https://github.com/ejentum/llama-index-tools-ejentum/issues"
Changelog = "https://github.com/ejentum/llama-index-tools-ejentum/blob/main/CHANGELOG.md"
Pricing = "https://ejentum.com/pricing"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "build>=1.2.0",
    "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["llama_index"]

[tool.hatch.build.targets.sdist]
include = [
    "llama_index/",
    "tests/",
    "examples/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
